<resources>
    <string name="app_name">مسبحتي</string>
    <string name="app_about">حول التطبيق</string>
    <string name="app_setting">الإعدادات</string>
    <string name="app_reset">تصفير مجموع التسبيحات</string>
    <string name="app_home">مسبحتي</string>
    <string name="app_communicate">تواصل معنا</string>
    <string name="app_share">مشاركة التطبيق</string>
    <string name="app_send">ارسل رسالة</string>
    <string name="app_tasbih_wered">تسبيح ورد</string>
    <string name="app_azkar">أذكار وأدعية</string>
    <string name="app_theme">اللون</string>
    <string name="app_vibration">الهزاز</string>
    <string name="title">أدخل عدد التسبيحات</string>
    <string name="contact_us">تواصل معنا</string>
    <string name="app_connectivity">الرجاء التأكد من أنك متصل بالإنترنت والمحاولة لاحقا</string>
    <string name="app_email">ahmad.chauk@hotmail.com</string>
    <string name="app_developer_name">Ahmad Chauk</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="action_menuright">Menu right</string>
    <string name="custom_settings">إعدادات التطبيق</string>
    <string name="counter_of_tasbih">مجموع التسبيحات :</string>
    <string name="app_rate">قيم التطبيق</string>
    <string name="banner_ad_unit_id">ca-app-pub-4733952857953754/6567093028</string>
    <string name="test_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string-array name="tasbihat">
        <item>سبحان الله</item>
        <item>الحمد لله</item>
        <item>لا إله إلا الله</item>
        <item>لا حول ولا قوة إلا بالله</item>
        <item>الله أكبر</item>
        <item>ما شاء الله</item>
    </string-array>
    <string-array name="names_ar">
        <item>هُوَ اللّٰهُ الَّذِي لَٓا اِلٰهَ اِلَّا هُوَ</item>
        <item>الرَّحْمَنُ</item>
        <item>الرَّحِيمُ</item>
        <item>الْمَلِكُ</item>
        <item>الْقُدُّوسُ</item>
        <item>السَّلاَمُ</item>
        <item>الْمُؤْمِنُ</item>
        <item>الْمُهَيْمِنُ</item>
        <item>الْعَزِيزُ</item>
        <item>الْجَبَّارُ</item>
        <item>الْمُتَكَبِّرُ</item>
        <item>الْخَالِقُ</item>
        <item>الْبَارِئُ</item>
        <item>الْمُصَوِّرُ</item>
        <item>الْغَفَّارُ</item>
        <item>الْقَهَّارُ</item>
        <item>الْوَهَّابُ</item>
        <item>الرَّزَّاقُ</item>
        <item>الْفَتَّاحُ</item>
        <item>العَلِيمُ</item>
        <item>الْقَابِضُ</item>
        <item>الْبَاسِطُ</item>
        <item>الْخَافِضُ</item>
        <item>الرَّافِعُ</item>
        <item>الْمُعِزُّ</item>
        <item>المُذِلُّ</item>
        <item>السَّمِيعُ</item>
        <item>الْبَصِيرُ</item>
        <item>الْحَكَمُ</item>
        <item>الْعَدْلُ</item>
        <item>اللَّطِيفُ</item>
        <item>الْخَبِيرُ</item>
        <item>الْحَلِيمُ</item>
        <item>الْعَظِيمُ</item>
        <item>الْغَفُورُ</item>
        <item>الشَّكُورُ</item>
        <item>الْعَلِيُّ</item>
        <item>الْكَبِيرُ</item>
        <item>الْحَفِيظُ</item>
        <item>المُقيِت</item>
        <item>الْحسِيبُ</item>
        <item>الْجَلِيلُ</item>
        <item>الْكَرِيمُ</item>
        <item>الرَّقِيبُ</item>
        <item>الْمُجِيبُ</item>
        <item>الْوَاسِعُ</item>
        <item>الْحَكِيمُ</item>
        <item>الْوَدُودُ</item>
        <item>الْمَجِيدُ</item>
        <item>الْبَاعِثُ</item>
        <item>الشَّهِيدُ</item>
        <item>الْحَقُّ</item>
        <item>الْوَكِيلُ</item>
        <item>الْقَوِيُّ</item>
        <item>الْمَتِينُ</item>
        <item>الْوَلِيُّ</item>
        <item>الْحَمِيدُ</item>
        <item>الْمُحْصِي</item>
        <item>الْمُبْدِئُ</item>
        <item>الْمُعِيدُ</item>
        <item>الْمُحْيِي</item>
        <item>الْمُِميتُ</item>
        <item>الْحَيُّ</item>
        <item>الْقَيُّومُ</item>
        <item>الْوَاجِدُ</item>
        <item>الْمَاجِدُ</item>
        <item>الْواحِدُ</item>
        <item>الصَّمَدُ</item>
        <item>الْقَادِرُ</item>
        <item>الْمُقْتَدِرُ</item>
        <item>الْمُقَدِّمُ</item>
        <item>الْمُؤَخِّرُ</item>
        <item>الأوَّلُ</item>
        <item>الآخِرُ</item>
        <item>الظَّاهِرُ</item>
        <item>الْبَاطِنُ</item>
        <item>الْوَالِي</item>
        <item>الْمُتَعَالِي</item>
        <item>الْبَرُّ</item>
        <item>التَّوابُ</item>
        <item>الْمُنْتَقِمُ</item>
        <item>العَفُوُّ</item>
        <item>الرَّؤُوفُ</item>
        <item>مَالِكُ الْمُلْكِ</item>
        <item>ذُوالْجَلاَلِ وَالإكْرَامِ</item>
        <item>الْمُقْسِطُ</item>
        <item>الْجَامِعُ</item>
        <item>الْغَنِيُّ</item>
        <item>الْمُغْنِي</item>
        <item>ُالمَانِعُ</item>
        <item>الضَّارَّ</item>
        <item>النَّافِعُ</item>
        <item>النُّورُ</item>
        <item>الْهَادِي</item>
        <item>الْبَدِيعُ</item>
        <item>الْبَاقِِي</item>
        <item>الْوَارِثُ</item>
        <item>الرَّشِيدُ</item>
        <item>الصَّبُورُ</item>
    </string-array>
    <string-array name="names_name">
        <item>Allah</item>
        <item>Ar-Rahman</item>
        <item>Ar-Rahim</item>
        <item>Al-Malik</item>
        <item>Al-Quddus</item>
        <item>As-Salam</item>
        <item>Al-Mu’min</item>
        <item>Al-Muhaymin</item>
        <item>Al-’Aziz</item>
        <item>Al-Jabbar</item>
        <item>Al-Mutakabbir</item>
        <item>Al-Khaliq</item>
        <item>Al-Bari’</item>
        <item>Al-Musawwir</item>
        <item>Al-Ghaffar</item>
        <item>Al-Qahhar</item>
        <item>Al-Wahhab</item>
        <item>Ar-Razzaq</item>
        <item>Al-Fattah</item>
        <item>Al-’Alim</item>
        <item>Al-Qabid</item>
        <item>Al-Basit</item>
        <item>Al-Khafid</item>
        <item>Ar-Rafi’</item>
        <item>Al-Mu’izz</item>
        <item>Al-Mudhill</item>
        <item>As-Sami</item>
        <item>Al-Basir</item>
        <item>Al-Hakam</item>
        <item>Al-’Adl</item>
        <item>Al-Latif</item>
        <item>Al-Khabir</item>
        <item>Al-Halim</item>
        <item>Al-’Azim</item>
        <item>Al-Ghafur</item>
        <item>Ash-Shakur</item>
        <item>Al-’Ali</item>
        <item>Al-Kabir</item>
        <item>Al-Hafiz</item>
        <item>Al-Muqit</item>
        <item>Al-Hasib</item>
        <item>Al-Jalil</item>
        <item>Al-Karim</item>
        <item>Ar-Raqib</item>
        <item>Al-Mujib</item>
        <item>Al-Wasi’</item>
        <item>Al-Hakim</item>
        <item>Al-Wadud</item>
        <item>Al-Majíd</item>
        <item>Al-Ba’ith</item>
        <item>Ash-Shahid</item>
        <item>Al-Haqq</item>
        <item>Al-Wakil</item>
        <item>Al-Qawi</item>
        <item>Al-Matin</item>
        <item>Al-Wáli</item>
        <item>Al-Hamid</item>
        <item>Al-Muhsi</item>
        <item>Al-Mubdi</item>
        <item>Al-Mu’id</item>
        <item>Al-Muhyi</item>
        <item>Al-Mumit</item>
        <item>Al-Hayy</item>
        <item>Al-Qayyum</item>
        <item>Al-Wajid</item>
        <item>Al-Májid</item>
        <item>Al-Wahid</item>
        <item>As-Samad</item>
        <item>Al-Qadir</item>
        <item>Al-Muqtadir</item>
        <item>Al-Muqaddim</item>
        <item>Al-Mu’akhkhir</item>
        <item>Al-Awwal</item>
        <item>Al-Akhir</item>
        <item>Az-Zahir</item>
        <item>Al-Batin</item>
        <item>Al-Walí</item>
        <item>Al-Muta’ali</item>
        <item>Al-Barr</item>
        <item>At-Tawwab</item>
        <item>Al-Muntaqim</item>
        <item>Al-Afu</item>
        <item>Ar-Ra’uf</item>
        <item>Malik al-Mulk</item>
        <item>Dhul-Jalali Wal-Ikram</item>
        <item>Al-Muqsit</item>
        <item>Al-Jami</item>
        <item>Al-Ghani</item>
        <item>Al-Mughni</item>
        <item>Al-Mani’</item>
        <item>Ad-Darr</item>
        <item>An-Nafi</item>
        <item>An-Nur</item>
        <item>Al-Hadi</item>
        <item>Al-Badi</item>
        <item>Al-Baqi</item>
        <item>Al-Warith</item>
        <item>Ar-Rashid</item>
        <item>As-Sabur</item>
    </string-array>
    <string name="app_update">التحديثات</string>
    <string name="app_check_for_update">تحقق من وجود تحديثات</string>
    <string name="app_developer">المطور</string>
    <string name="app_names">أسماء الله الحسنى</string>
</resources>