<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="2dp"
                android:text="@string/custom_settings"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />



            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorSettings" />

            <LinearLayout
                android:id="@+id/llselectalarm"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/click_background"
                android:gravity="center_vertical"
                android:layoutDirection="rtl"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_marginLeft="7dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/app_theme"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:id="@+id/button_color"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="15dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorSettings" />

            <LinearLayout
                android:id="@+id/rejraj"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/click_background"
                android:gravity="center_vertical"
                android:layoutDirection="rtl"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/app_vibration"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <CheckBox
                    android:id="@+id/checkbox_vibration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="15dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorSettings" />
        </LinearLayout>


    </ScrollView>

</LinearLayout>